--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,5 @@
 html {
+  scroll-behavior: smooth;
   overflow-y: hidden;
   overflow-x: hidden;
   scrollbar-width: thin;
@@ -18,7 +19,7 @@ html::-webkit-scrollbar-thumb {
 }
 
 body {
-  font-family: 'reg', sans-serif;
+  font-family: "reg", sans-serif;
   text-align: left;
 }
 
@@ -34,7 +35,7 @@ input,
 a,
 button,
 textarea {
-  font-family: 'reg', sans-serif;
+  font-family: "reg", sans-serif;
 }
 
 input:focus,
@@ -80,7 +81,7 @@ ul.res {
   src: url("../fonts/RB-Bold.ttf") format("ttf"), url("../fonts/RB-Bold.woff") format("woff"), url("../fonts/RB-Bold.woff2") format("woff2"), url("../fonts/RB-Bold.eot") format("eot");
 }
 
-.Flex, .loader, .sideNav, header .TopNav .content .last, header .TopNav .content .last a, .slider .swiper-slide a, .overview .box .content .icon, .overview .box .content a, .blog .head .more-work, .blog .swiper-slide .bottom a, .blog .col-lg-4 .bottom a, .faq .head .more-work, .faq .contact form button, .contact-sec .box .pic, .vision .pic .icon, .article .top .bottom .share, .product .product-details .share {
+.Flex, .loader, .sideNav, header .TopNav .content .last, header .TopNav .content .last a, .slider .swiper-slide a, .overview .box .content .icon, .overview .box .content a, .blog .head .more-work, .blog .swiper-slide .bottom a, .blog .col-lg-4 > .box .bottom a, .faq .head .more-work, .faq .contact form button, .contact-sec .box .pic, .vision .pic .icon, .article .top .bottom .share, .product .product-details .share {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -92,12 +93,12 @@ ul.res {
           justify-content: center;
 }
 
-.hover, .blog .head .more-work, .blog .swiper-slide .bottom a, .blog .col-lg-4 .bottom a, .faq .head .more-work, .faq .contact form button {
+.hover, .blog .head .more-work, .blog .swiper-slide .bottom a, .blog .col-lg-4 > .box .bottom a, .faq .head .more-work, .faq .contact form button {
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
-.hover:hover, .blog .head .more-work:hover, .blog .swiper-slide .bottom a:hover, .blog .col-lg-4 .bottom a:hover, .faq .head .more-work:hover, .faq .contact form button:hover {
+.hover:hover, .blog .head .more-work:hover, .blog .swiper-slide .bottom a:hover, .blog .col-lg-4 > .box .bottom a:hover, .faq .head .more-work:hover, .faq .contact form button:hover {
   border: 1px solid #7d4c21;
   background-color: transparent;
   color: #7d4c21;
@@ -417,9 +418,31 @@ html[dir="ltr"] .sideNav > ul > li i {
   color: #595959;
 }
 
+header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+  background-color: #fff;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+header.scroll {
+  -webkit-box-shadow: 0 0 10px rgba(125, 76, 33, 0.2);
+          box-shadow: 0 0 10px rgba(125, 76, 33, 0.2);
+}
+
+header.scroll .TopNav {
+  padding: 15px 0;
+}
+
 header .TopNav {
   padding-top: 30px;
   margin-bottom: 75px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 header .TopNav .content {
@@ -502,6 +525,13 @@ html[dir="rtl"] header .TopNav .content .links li:not(:last-child) {
 header .TopNav .content .links li a {
   font-size: 16px;
   color: #000;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+header .TopNav .content .links li a:hover {
+  font-weight: bold;
+  color: #7d4c21;
 }
 
 header .TopNav .content .last {
@@ -1376,32 +1406,34 @@ html[dir="rtl"] .blog .head .more-work {
   }
 }
 
-.blog .col-lg-4 {
+.blog .col-lg-4 > .box {
   border-radius: 40px;
   overflow: hidden;
   margin-bottom: 40px;
+  -webkit-box-shadow: 0 0 5px rgba(125, 76, 33, 0.1);
+          box-shadow: 0 0 5px rgba(125, 76, 33, 0.1);
 }
 
-.blog .col-lg-4 .bottom {
+.blog .col-lg-4 > .box .bottom {
   padding: 31px 40px 36px;
   text-align: center;
 }
 
-.blog .col-lg-4 .bottom h3 {
+.blog .col-lg-4 > .box .bottom h3 {
   font-size: 20px;
   font-family: bold;
   color: #000000;
   margin-bottom: 5px;
 }
 
-.blog .col-lg-4 .bottom p {
+.blog .col-lg-4 > .box .bottom p {
   font-size: 16px;
   color: #8a8a8a;
   line-height: 30px;
   margin-bottom: 20px;
 }
 
-.blog .col-lg-4 .bottom a {
+.blog .col-lg-4 > .box .bottom a {
   margin: auto;
   width: 137px;
   height: 50px;
@@ -1412,7 +1444,7 @@ html[dir="rtl"] .blog .head .more-work {
 }
 
 @media (max-width: 480px) {
-  .blog .col-lg-4 > img {
+  .blog .col-lg-4 > .box > img {
     width: 100%;
     -o-object-fit: cover;
        object-fit: cover;
@@ -1886,6 +1918,9 @@ footer .socials a:hover svg path {
 .materials .col-lg-3 img {
   border-radius: 30px;
   margin-bottom: 26px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
 }
 
 .materials .col-lg-3 h2 {
@@ -1947,6 +1982,24 @@ footer .socials a:hover svg path {
 
 .vision .bottom p:last-child {
   margin-bottom: 127px;
+}
+
+.article .top .pic {
+  border-radius: 30px;
+  overflow: hidden;
+}
+
+@media (max-width: 991px) {
+  .article .top .pic {
+    height: 200px;
+  }
+}
+
+.article .top .pic img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .article .top .bottom {
@@ -2331,6 +2384,90 @@ html[dir="rtl"] .product .spicifications ul li span:first-child {
     border-left: 0;
     font-family: bold;
   }
+}
+
+.fancybox-image {
+  border-radius: 30px;
+}
+
+.productDetails {
+  margin-top: 80px;
+}
+
+@media (max-width: 991px) {
+  .productDetails {
+    margin-top: 0;
+    text-align: center;
+  }
+}
+
+.productDetails span {
+  font-size: 22px;
+  color: #7d4c21;
+  display: block;
+  margin-bottom: 19px;
+}
+
+.productDetails h2 {
+  font-size: 35px;
+  font-family: bold;
+  color: #000;
+  position: relative;
+}
+
+.productDetails h2:after {
+  content: "";
+  display: block;
+  width: 38px;
+  height: 3px;
+  background-color: #7d4c21;
+  border-radius: 4px;
+  margin-top: 15px;
+  margin-bottom: 33px;
+}
+
+@media (max-width: 991px) {
+  .productDetails h2:after {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+.productDetails p {
+  margin-bottom: 0;
+  font-size: 18px;
+  color: #000000;
+  line-height: 35px;
+}
+
+.productDetails .col-lg-6:not(:last-child) {
+  margin-bottom: 80px;
+}
+
+@media (max-width: 991px) {
+  .productDetails .col-lg-6:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
+
+.productDetails .col-lg-6:nth-child(2), .productDetails .col-lg-6:nth-child(6), .productDetails .col-lg-6:nth-child(10) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.productDetails .col-lg-6:nth-child(odd) img {
+  border-radius: 0 70px 0 70px;
+}
+
+.productDetails .col-lg-6:nth-child(even) img {
+  border-radius: 70px 0 70px 0;
 }
 
 /*# sourceMappingURL=home.css.map */
